# fub_constrained

./: .gitmodules  CMakeLists.txt  Readme.md
doc/: constrained.doxygen
include/fub/: constrained.hpp  functional.hpp
include/fub/constrained/: bounded.hpp  concepts.hpp  constrained.hpp  error_policies.hpp  functional.hpp  not_null.hpp  positive.hpp
test/: constrained.t.cpp
